--- a/.github/workflows/MyFirstWorkflow.yml
+++ b/.github/workflows/MyFirstWorkflow.yml
@@ -37,7 +37,7 @@ jobs:
           tree
       - run: | 
           echo "Homedrive: ${{ inputs.homedrive }}"
-          echo "Log level: ${{ inputs.logLevell }}"
+          echo "Log level: ${{ inputs.logLevel }}"
           echo "Tag source: ${{ fromJSON(inputs.tag) }}"
           echo "Environment: ${{ inputs.environment }}"
         name: Workflow Inputs
